--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ img {
 .home__social-icon {
   width: max-content;
   margin-bottom: 0.5rem;
-  margin-right: 0.5rem;
+  margin-left: .5rem;
   font-size: 1.5rem;
   color: var(--second-color);
 }
