--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ body {
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   color: var(--second-color);
+  background: #FCFFE7;
 }
 
 h1, h2, p {
