--- a/style.css
+++ b/style.css
@@ -337,6 +337,10 @@ img {
   width: 85%;
 }
 
+.skills__bootstrap{
+  width: 80%;
+}
+
 .skills__img {
   border-radius: .5rem;
   margin-top: 0.6rem;
